# watchman-pairing-assistant

./: .gitignore  README.md  flake.nix  pyproject.toml
nix/: package.nix
resources/: watchman-pairing-assistant.desktop
source/: main.py
